src/test/test-models/bad/reserved/STAN_MATH_MAJOR.stan
data {
  real STAN_MATH_MAJOR;
}
model {
}
